hphp/hack/test/enum_supertyping/typing/base.bad.php.exp
File "base.bad.php", line 7, characters 7-7:
Enum B includes enum A but their base types are incompatible (Typing[4388])
