hphp/hack/test/enum_supertyping/typing/base.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

enum A : int {}

enum B : string {
  use A;
}
